--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "snarkyjs": "0.9.8",
     "typescript": "^5.0.4",
     "zod": "^3.21.4",
-    "snarkyjs": "^0.10.1",
     "zod-to-json-schema": "^3.20.4"
   },
   "devDependencies": {
     "@types/node": "^20.1.1",
+    "eslint-plugin-snarkyjs": "^0.3.0",
     "ts-creator": "^1.2.5"
   }
 }
