Compatible with zod to json date updated schema

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "snarkyjs": "^0.10.1",
     "typescript": "^5.0.4",
     "zod": "^3.21.4",
-    "snarkyjs": "^0.10.1",
-    "zod-to-json-schema": "https://github.com/rloot/zod-to-json-schema.git"
+    "zod-to-json-schema": "3.21.2"
   },
   "devDependencies": {
     "@types/node": "^20.1.1",
