add test for packing variable

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*"],
+  "include": ["./src/**/*", "./test/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
