--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "z0k",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "zok library for zod to snarkyjs struct transformation",
   "bin": {
-    "zok": "src/index.ts"
+    "zok": "dist/index.js"
   },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
-    "start": "rm -rf src/structs.ts && npm run build &&  ts-node src/index.ts"
+    "start": "rm -rf src/structs.ts && npm run build && node dist/index.js"
   },
   "author": "",
   "license": "ISC",
