--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "z0k",
-  "version": "0.0.16",
+  "version": "0.0.18",
   "description": "zok library for zod to snarkyjs struct transformation",
   "bin": {
     "zok": "build/index.js"
@@ -22,5 +22,6 @@
   "devDependencies": {
     "@types/node": "^20.1.1",
     "ts-creator": "^1.2.5"
-  }
+  },
+  "type": "module"
 }
