--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "z0k",
-  "version": "0.0.18",
+  "version": "0.0.14",
   "description": "zok library for zod to snarkyjs struct transformation",
   "bin": {
     "zok": "build/index.js"
@@ -19,9 +19,9 @@
     "zod": "^3.21.4",
     "zod-to-json-schema": "3.21.2"
   },
+  "type": "module",
   "devDependencies": {
     "@types/node": "^20.1.1",
     "ts-creator": "^1.2.5"
-  },
-  "type": "module"
+  }
 }
