exclude src/generated from compilation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["./src/**/*", "./test/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "src/generated/**/*"]
 }
