--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,16 @@
     "esm": true
   },
   "compilerOptions": {
-    "target": "es2020",
-    "module": "ES2020",
-    "lib": ["dom", "esnext"],
-    "outDir": "./build/src",
+    "target": "esnext",
+    "module": "esnext",
+    // "lib": ["dom", "esnext"],
+    "outDir": "./build",
+    "moduleResolution": "Node",
     "strict": false,
     "strictPropertyInitialization": false, // to enable generic constructors, e.g. on CircuitValue
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "moduleResolution": "Node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "allowJs": true,
