--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "z0k",
   "version": "0.1.5",
   "description": "zok library for zod to snarkyjs struct transformation",
+  "type": "module",
   "bin": {
     "z0k": "build/src/index.js"
   },
-  "main": "index.js",
+  "main": "build/src/index.js",
   "scripts": {
     "test": "mocha",
     "build": "tsc -p .",
@@ -19,14 +20,14 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "zod": "^3.21.4",
-    "zod-to-json-schema": "3.21.2"
+    "zod-to-json-schema": "^3.21.4"
   },
-  "type": "module",
   "devDependencies": {
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.1.1",
     "chai": "^4.3.7",
+    "commander": "^11.0.0",
     "snarkyjs-math": "^0.3.0",
     "ts-creator": "^1.2.5"
   }
