--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,24 +5,28 @@
     "esm": true
   },
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    // "lib": ["dom", "esnext"],
+    "target": "es2020",
+    "module": "es2022",
+    "lib": ["dom", "esnext"],
     "outDir": "./build",
-    "moduleResolution": "Node",
-    "strict": false,
+    "strict": true,
     "strictPropertyInitialization": false, // to enable generic constructors, e.g. on CircuitValue
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
+    "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "allowJs": true,
     "declaration": true,
     "sourceMap": true,
     "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
-  "include": ["./src/**/*", "./test/**/*"],
+  "include": [
+    "./src/**/*",
+    "./test/**/*",
+    "./src/**/*.d.ts"
+  ],
   "exclude": ["node_modules", "**/*.spec.ts", "src/generated/**/*"]
 }
