--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "z0k": "build/src/index.js"
   },
   "main": "build/src/index.js",
+  "types": "build/src/typings/index.d.ts",
   "scripts": {
     "test": "mocha",
     "build": "tsc -p .",
@@ -16,7 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "mocha": "^10.2.0",
-    "snarkyjs": "^0.11.0",
+    "snarkyjs": "^0.11.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "zod": "^3.21.4",
@@ -28,7 +29,6 @@
     "@types/node": "^20.1.1",
     "chai": "^4.3.7",
     "commander": "^11.0.0",
-    "snarkyjs-math": "^0.3.0",
     "ts-creator": "^1.2.5"
   }
 }
