--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "mocha": "^10.2.0",
-    "snarkyjs": "^0.11.4",
+    "snarkyjs": "0.11.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "zod": "^3.21.4",
